--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@prismicio/client": "^6.6.3",
+    "@prismicio/react": "^2.4.3",
     "framer-motion": "^6.5.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5",
     "swiper": "^8.3.2"
   },
